@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.5rc2
 
 	- Documentation updates (STR #365, STR #399)
+	- Fl_Text_Buffer::replace() now range checks its input
+	  (STR #385)
 	- FLTK now builds with the current release of MinGW (STR
 	  #325, STR #401, STR #402)
 	- FLTK now honors the numlock key state (STR #369)
